--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "axios": "^0.16.2",
     "body-parser": "^1.18.2",
+    "dotenv": "^4.0.0",
     "express": "^4.15.5",
     "lodash.camelcase": "^4.3.0",
     "mongoose": "^4.11.13"
