--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
     "dotenv": "^4.0.0",
     "express": "^4.15.5",
     "lodash.camelcase": "^4.3.0",
-    "mongoose": "^4.11.13"
+    "mongoose": "^4.11.13",
+    "morgan": "^1.9.0"
   },
   "devDependencies": {
     "dotenv": "^4.0.0",
     "mocha": "^3.5.3",
-    "morgan": "^1.9.0",
     "nodemon": "^1.12.1",
     "sinon": "^4.0.0",
     "sinon-mongoose": "^2.0.2",
